# gurmukhi

./: README.md
.github/: CODEOWNERS
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  node.js.yml
sentencecreator/: .gitignore  README.md  config.py  pyproject.toml  sentencecreator.py  words.csv
shabadkosh/: .env.sample  .eslintrc.js  .eslintrc.json  .firebaserc  .gitignore  README.md  firebase.json  firestore.rules  package-lock.json  package.json  tsconfig.json  webpack.config.js
shabadkosh/src/: App.js  App.test.tsx  App.tsx  firebase.js  firebase.ts  index.css  index.tsx  store.js
shabadkosh/src/components/: About.tsx  Contact.js  Contact.tsx  Home.js  Home.tsx  NavBar.js  NavBar.tsx  Options.tsx  ProtectedRoute.tsx  Search.js  Search.tsx  SupportWord.tsx  UserAuthContext.js  UserAuthContext.tsx  require-auth.tsx
shabadkosh/src/components/auth/: ForgotPassword.tsx  Login.js  Login.tsx  Logout.tsx  Signup.js  Signup.tsx
shabadkosh/src/components/constants/: index.ts
shabadkosh/src/components/sentences/: ViewSentences.tsx
shabadkosh/src/components/user/: CreateUser.tsx  EditUser.tsx  Profile.js  Profile.tsx  Settings.js  Settings.tsx  Users.tsx
shabadkosh/src/components/util/: controller.ts  users.ts  utils.ts
shabadkosh/src/components/wordlists/: AddWordlist.tsx  EditWordlist.tsx  MultiSelectDropDown.tsx  ViewWordlist.tsx  Wordlists.tsx
shabadkosh/src/context/: auth-context.tsx
shabadkosh/src/types/: index.ts  question.ts  sentence.ts  timestamp.ts  user.ts  word.ts  wordlist.ts
(+19 files in other folders)
