[tool.poetry]
name = "sentencecreator"
version = "0.1.0"
description = "Creates a list of sentences given a list of words"
authors = ["Balwinder Kaur <bkaurca@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
pandas = "^2.0.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
